--- a/figuras.html
+++ b/figuras.html
@@ -8,8 +8,25 @@
     
 </head>
 <body>
-    <h1>Figuras geométricas</h1>
-
+    <header>
+        <h1>
+            Figuras geométricas
+        </h1>
+        <p>Este es el primer taller del curso práctico de JavaScript</p>
+    </header>
+    <section>
+        <h2>Calcula el área y perímetro de un cuadrado</h2>
+        <form action="">
+            <label for="InputCuadrado">Escribe cuanto mide cada lado de tu cuadrado:</label>
+            <input type="number" name="InputCuadrado" id="InputCuadrado">
+            <button type="button" onclick="calcularPerimetroCuadrado()">
+                Calcular el perímetro
+            </button>
+            <button type="button" onclick="calcularAreaCuadrado()">
+                Calcular el área
+            </button>
+        </form>
+    </section>
     <script src="figuras.js"></script>
 </body>
 </html>
