--- a/descuentos.html
+++ b/descuentos.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porcentaje y descuentos | Curso practico de javascript en platzi</title>
+    <style>
+        .couponss{
+            display :none;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -19,16 +24,17 @@
             <label for="InputPrice">Escribe el precio de tu producto:</label>
             <input type="number" id="InputPrice">
 
-            <label for="InputDiscount">Escribe el precio de tu producto:</label>
-            <input type="number" id="InputDiscount">
-
+            <!-- <label for="InputDiscount">Escribe el descuento de tu producto:</label>
+            <input type="number" id="InputDiscount"> -->
+            <p>Seleccionar descuento</p>
+            <select class="coupons" id="coupons"></select>
             <button type="button" onclick="onClickButtonPriceDiscount()">
                 Calcular el precio con descuento
             </button>
+            
             <p id="ResultPrice"></p>
         </form>
     </section>
-
     <script src="descuentos.js"></script>
 </body>
 </html>
